# AmigaIPPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Smakefile
examples/: ipc.h  ipc_ctrl.c  ipc_ctrl.h  ipc_srvc.c  ping-pong.c
src/: ippc.c  ippc.h
